TUI: find preceding visible dependency when toggling show-all off